--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -21,6 +21,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.agent.master_agent import MasterAgent\n",
+    "from agents.extensions.visualization import draw_graph\n",
+    "draw_graph(MasterAgent.agent)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -53,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
